syntax = "proto3";

import "models/status.proto";

message HeaderRequest {
  optional string version = 1;
}

message HeaderResponse {
  optional Status status = 1;
  optional string message = 2;
}
