syntax = "proto3";

import "models/registered_function.proto";
import "models/status.proto";

message RegisterFunctionRequest {
  optional RegisteredFunction function_to_register = 1;
}

message RegisterFunctionResponse {
  optional Status status = 1;
  optional string message = 2;
}
