syntax = "proto3";

import "shared/registered_function.proto";

message RegisterFunctionRequest {
  optional RegisteredFunction function_to_register = 1;
}

message WorkerRequest {
  oneof request {
    RegisterFunctionRequest register_function = 1;
  }
}
